@@ -5,7 +5,7 @@ defined('BASEPATH') OR exit('No direct script access allowed');
 $config['menu_choices'] = array(
     'menudata' => array(
         array('name' => 'Home', 'link' => '/'),
-        array('name' => 'Work', 'link' => '/#'),
+        array('name' => 'Work', 'link' => '/Views'),
         array('name' => 'Maintenance', 'link' => '/#'),
         array('name' => 'Help Wanted', 'link' => '/#'),
         )
