@@ -9,3 +9,5 @@ Repo: https://github.com/COMP4711Lab0-3/starter-todo4
 * added task model and pre-loaded the model
 
 * added home page to show tasks
+
+* added ordered list features
